<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MRPink"
    tools:context=".RegistroActivity">

    <Button
        android:id="@+id/btnAccionRegistrarse"
        android:layout_width="283dp"
        android:layout_height="60dp"
        android:layout_marginBottom="64dp"
        android:text="@string/textRegistrarse"
        android:textColor="@color/MRLightPink"
        android:textSize="12sp"
        app:backgroundTint="@color/MREnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="240dp"
        android:layout_height="80dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/todoText"
        android:isScrollContainer="false"
        android:rotation="-5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:clickable="false"
        app:layout_constraintBottom_toTopOf="@+id/btnAccionRegistrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:labelFor="@id/etConfirmarPasswdRegistro"
                android:text="@string/confirmar_contrase_aText"
                android:textColor="@color/MRLightPink"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPasswdRegistro" />

            <EditText
                android:id="@+id/etConfirmarPasswdRegistro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@color/MRLightPink"
                android:textColorHighlight="#8E6A4C"
                android:textColorLink="#FFFFFF"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <EditText
                android:id="@+id/etPasswdRegistro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@color/MRLightPink"
                android:textColorHighlight="#8E6A4C"
                android:textColorLink="#FFFFFF"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:labelFor="@id/etPasswdRegistro"
                android:text="@string/textPasswd"
                android:textColor="@color/MRLightPink"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etCorreoRegistro" />

            <EditText
                android:id="@+id/etNombreUsuario"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/MRLightPink"
                android:textColorHighlight="#8E6A4C"
                android:textColorLink="#FFFFFF"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:labelFor="@id/etNombreUsuario"
                android:text="@string/nomUsuarioText"
                android:textColor="@color/MRLightPink"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etCorreoRegistro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textColor="@color/MRLightPink"
                android:textColorHighlight="#8E6A4C"
                android:textColorLink="#FFFFFF"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <EditText
                android:id="@+id/etNombreRegistro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/MRLightPink"
                android:textColorHighlight="#8E6A4C"
                android:textColorLink="#FFFFFF"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:labelFor="@id/etCorreoRegistro"
                android:text="@string/correoText"
                android:textColor="@color/MRLightPink"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etNombreRegistro" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:labelFor="@id/etNombreRegistro"
                android:text="@string/nombreText"
                android:textColor="@color/MRLightPink"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etNombreUsuario" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>